# seselik-product-service

./: .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.docker/: Dockerfile
.github/: dependabot.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: healthcheck_endpoints.py  product_endpoints.py
app/infraestructure/database/: common.py  session.py
app/models/: product_model.py
app/services/: product_service.py
app/settings/: database_settings.py
tests/: conftest.py
tests/app/api/v1/endpoints/product_endpoints/: test_get_all_products_endpoint.py
